# AIHex

./: CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  main.cpp  yai.cpp  yai.h  yconstants.cpp  yconstants.h  ycontroller.cpp  ycontroller.h  yexception.cpp  yexception.h  ygamestate.cpp  ygamestate.h  ygui.cpp  ygui.h
